# TestDemo

./: .coverage  .env  .gitignore  docker-compose.yml  dump.rdb  weather.db
.github/workflows/: ci.yml  deploy.yml
backend/: .coverage  .env  Dockerfile  dump.rdb  pyproject.toml  requirements.txt  weather.db
backend/app/: __init__.py  config.py  data.py  database.py  main.py  models.py  utils.py
backend/frontend/: Dockerfile  requirements.txt  streamlit_app.py
backend/tests/: .coverage  conftest.py  test_api.py  test_core.py  test_integration.py
backend/tests/load_tests/: locustfile.py
backups/: weather_backup_20250312-081118.dump
ci-cd/github-actions/: ci.yml
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  Login.js  Signup.js  api.js  tailwind.css
frontend/src/components/: Dashboard.js  SearchBar.js  WeatherCard.js  WeatherHistory.js  WeatherTrends.js
infrastructure/: backup.Dockerfile
infrastructure/backups/20250310-011333/: weather.db
infrastructure/scripts/: backup-cron  backup_restore.sh
monitoring/grafana/dashboards/: weather-dashboard.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: datasources.yaml
monitoring/prometheus/: alerts.yml  prometheus.yml
