[project]
name = "weather-monitoring"
version = "0.1.0"
description = "Weather monitoring application"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.68.0",
    "sqlalchemy>=1.4.0",
    "python-dotenv>=0.19.0",
    "redis>=4.3.0",
    "requests>=2.26.0",
    "pytest>=7.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=app",
    "--cov-report=term-missing:skip-covered",  # Cleaner output
    "--cov-fail-under=60",
    "--verbose",
    "--disable-warnings",
    "--strict-markers"  # Ensure test markers are defined
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestRemovedIn8Warning"
]
markers = [
    "slow: mark test as slow to run",
    "integration: integration test",
    "redis: test requires redis"
]

[tool.coverage.run]
source = ["app"]
branch = true
parallel = true  # Enable parallel coverage
omit = [
    "app/__init__.py",
    "app/main.py",  # Entry point doesn't need coverage
    "app/tests/*"  # Exclude test directory
]

[tool.coverage.report]
show_missing = true
fail_under = 60
precision = 2
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "def __repr__",
    "raise NotImplementedError"
]
ignore_errors = true  # Continue despite missing files

[tool.coverage.paths]
source = ["app"]  # Map source paths correctly